# supercomp2

01-intro-cpp/: avg.cpp  euclidian  euclidian.cpp  final  final.cpp  time  time.cpp
02-oo-cpp/: experimento.cpp  experimento.hpp  log.cpp  log.hpp  main  main.cpp  mathpow3.cpp  mathpow3.hpp  pow3.cpp  pow3.hpp  sqrt.cpp  sqrt.hpp  sum.cpp  sum.hpp
03-stl/: tarefa  tarefa1.cpp  tarefa2.cpp
04-cmake-debugging/: CMakeLists.txt
05-simd-I/: tarefa2  tarefa2.cpp
06-simd-II/: avx-mask.c  avx-sqrt.cpp  experimento.hpp  soma_positivos.cpp  soma_positivos.hpp  teste
08-threads-I/: exemplo1  exemplo1-threads.cpp  pi  pi-numeric-integration.cpp
09-threads-II/: exemplo1.cpp  pi  pi_compared.cpp
10-threads-III/: mandel  mandel.cpp
11-thread-safety/: pi  pi_mc.c  pi_mc_par1.cpp  pi_mc_par2.cpp  pi_mc_par3.cpp  pi_mc_random.cpp  pi_par1  pi_par2  pi_par3  pi_random  random.c
12-tarefas/: fib1  fib_par1.cpp  think  think.cpp
13-gpu-I/: exemplo1-criacao-iteracao.cu  exercicio1.cu
15-gpu-IV/: mat-mult-seq.cu  mat-mult-tile.cu
17-gpu-final/: pi-numeric-integration-gpu.cu
18-mpi-intro/: circular  circular.cpp  mpi  mpi-errado1.cpp
projeto-01/: CMakeLists.txt  Eduardo Tirta - Projeto 1.ipynb  README.md  collision.cpp  collision.hpp  entrada100  entrada1000  entrada500  entrada800  gerador.py  main.cpp  notebook.tex  rectangle.cpp  rectangle.hpp
projeto-02/: CMakeLists.txt  in08  in10  in12  notebook.tex  tsp-bb.cpp  tsp-seq.cpp
projeto-02/.ipynb_checkpoints/: Eduardo Tirta - Projeto 2-checkpoint.ipynb
projeto-03/: 2-opt-sol.cu  2-opt.cu  2opt  CMakeLists.txt  Eduardo Tirta - Projeto 2.ipynb  Eduardo Tirta - Projeto 3.ipynb  README.md  draft.md  in30  notebook.tex  rand  random  random-sol.cu  tsp-par.cpp  tsp-seq-bb  tsp-seq-bb.cpp  tsp.cpp  tsp.py
projeto-03/.ipynb_checkpoints/: Eduardo Tirta - Projeto 3-checkpoint.ipynb
projeto1/: Analyses.ipynb  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collision.cpp  collision.hpp  main.cpp  main.py  main_fast  rect.cpp  rect.hpp  rectangle.py
projeto1/.ipynb_checkpoints/: relatorio-checkpoint.ipynb
